kustomization/demo_application/overlays/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: demo-website
  name: demo-website
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo-website
  template:
    metadata:
      labels:
        app: demo-website
    spec:
      containers:
      - image: demo_image
        name: httpd
