kustomization/demo_application/overlays/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: demo-website
  name: demo-website
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: demo-website
  type: NodePort
