kustomization/demo_application/overlays/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
    alb.ingress.kubernetes.io/subnets: subnet-01a70251e217812c0,subnet-0fdb7ffefc245429b
    kubernetes.io/ingress.class: alb
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: demo-website
spec:
  rules:
  - http:
      paths:
      - backend:
          service:
            name: demo-website
            port:
              number: 80
        path: /
        pathType: Prefix
